# argilla-template

./: .cursorrules  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
argilla/: __init__.py
docs/: README.md
rust_ext/: Cargo.toml  lib.rs
rust_ext/src/: lib.rs
tests/: test_rust_ext.py
