[project]
name = "argilla"
version = "0.1.0"
description = "A shapeable Python project template"
authors = [{ name = "Tom G", email = "your@email.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "django",
    "notebook",
    "ipykernel",
    "pandas",
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",         # Linter/formatter
    "mypy",         # Type checker
    "jupyterlab",   # Optional frontend for notebooks
    "ipython",
    "build",
    "twine",
    "maturin"       # Rust-Python bridge builder for PyO3
]

[tool.uv]
# Optional: speeds up uv install using cache
cache-dir = ".uv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argilla"]
